objects/BICE_Alert__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates a lookup relationship to the Account object.</description>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BICE Alerts</relationshipLabel>
        <relationshipName>BICE_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BICE_Fin_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BICE Fin Account</label>
        <referenceTo>BICE_Fin_Account__c</referenceTo>
        <relationshipLabel>BICE Alerts</relationshipLabel>
        <relationshipName>BICE_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Case object.</description>
        <label>CaseId</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>BICE Alerts</relationshipLabel>
        <relationshipName>BICE_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_Account__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ AccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <description>Identificador único para alertas.</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Opportunitty object.</description>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BICE Alerts</relationshipLabel>
        <relationshipName>BICE_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_alert__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Alert type</description>
        <label>Type of alert</label>
        <referenceTo>BICE_Alert_Type__c</referenceTo>
        <relationshipLabel>BICE Alerts</relationshipLabel>
        <relationshipName>BICE_Alerts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that should receive the notification</description>
        <inlineHelpText>The user that should receive the notification</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BICE_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BICE Alert</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BICE Alerts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>